# shibudo-finances

./: .env  .gitignore  Procfile  build.sh  manage.py  pyproject.toml
_shibudo_finances/: asgi.py  settings.py  urls.py  wsgi.py
categories/: models.py  permissions.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_name.py
finances/: models.py  permissions.py  serializers.py  views.py
finances/migrations/: 0001_initial.py  0002_initial.py  0003_alter_finance_category.py
lists/: models.py  permissions.py  serializers.py  urls.py  views.py
lists/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py  0002_alter_user_is_superuser.py
