[tool.poetry]
name = "shibudo finances - api"
version = "0.1.0"
description = "Projeto para controlar suas finanças de forma fácil e intuitiva"
authors = ["Gabriel Machado <gbrasil200@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
djangorestframework-simplejwt = "^5.2.2"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.5"
pillow = "^9.4.0"
boto3 = "^1.26.87"
django-storages = "^1.13.2"
drf-spectacular = "^0.26.0"
dj-database-url = "^1.2.0"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
